--- a/Source/Misc Alerts/Alerts.xib
+++ b/Source/Misc Alerts/Alerts.xib
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="23727" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="24112" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="23727"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="24112"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="Alerts" customModule="Batch_Clipboard" customModuleProvider="target">
             <connections>
+                <outlet property="batchHotkeyCheckbox" destination="Ilx-QS-tta" id="8Oy-IP-IaR"/>
+                <outlet property="batchHotkeyContainerView" destination="fmE-sR-8wY" id="8ad-qf-18B"/>
+                <outlet property="batchNameField" destination="paL-gU-1Ho" id="Iac-6J-fm9"/>
                 <outlet property="pasteMultipleAccessoryView" destination="y41-gr-I26" id="WE2-vw-uWi"/>
                 <outlet property="pasteMultipleField" destination="g7b-ej-XJP" id="eBd-PJ-Lz8"/>
                 <outlet property="pasteWithSeparatorPopup" destination="5OK-9O-70e" id="qD7-fG-g2O"/>
+                <outlet property="saveBatchAccessoryView" destination="lxV-CJ-jsd" id="hna-ZQ-mNv"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="y41-gr-I26">
+        <customView id="y41-gr-I26" userLabel="Paste Count Accessory View">
             <rect key="frame" x="0.0" y="0.0" width="222" height="59"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
@@ -78,6 +82,50 @@
                 <constraint firstItem="g7b-ej-XJP" firstAttribute="centerX" secondItem="y41-gr-I26" secondAttribute="centerX" id="zh4-yV-A2X"/>
             </constraints>
             <point key="canvasLocation" x="137" y="320.5"/>
+        </customView>
+        <customView id="lxV-CJ-jsd" userLabel="Batch Name Accessory View">
+            <rect key="frame" x="0.0" y="0.0" width="222" height="91"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <subviews>
+                <textField focusRingType="none" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="paL-gU-1Ho">
+                    <rect key="frame" x="0.0" y="70" width="222" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="222" id="IzM-R0-mmr"/>
+                    </constraints>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" alignment="center" drawsBackground="YES" id="BdQ-PF-tL8">
+                        <font key="font" usesAppearanceFont="YES"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
+                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ilx-QS-tta">
+                    <rect key="frame" x="20" y="37" width="181" height="18"/>
+                    <buttonCell key="cell" type="check" title="Assign keyboard shortcut" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="eTe-EK-TQn">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                </button>
+                <customView translatesAutoresizingMaskIntoConstraints="NO" id="fmE-sR-8wY">
+                    <rect key="frame" x="21" y="0.0" width="180" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="BPz-h4-TH9"/>
+                        <constraint firstAttribute="width" constant="180" id="MKw-SX-9Rd"/>
+                    </constraints>
+                </customView>
+            </subviews>
+            <constraints>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Ilx-QS-tta" secondAttribute="trailing" id="4BP-oF-2lv"/>
+                <constraint firstAttribute="bottom" secondItem="fmE-sR-8wY" secondAttribute="bottom" id="4wV-Jh-zRv"/>
+                <constraint firstItem="Ilx-QS-tta" firstAttribute="top" secondItem="paL-gU-1Ho" secondAttribute="bottom" constant="16" id="5cC-Yc-Ni0"/>
+                <constraint firstAttribute="trailing" secondItem="paL-gU-1Ho" secondAttribute="trailing" id="EHd-o0-vVM"/>
+                <constraint firstItem="Ilx-QS-tta" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="lxV-CJ-jsd" secondAttribute="leading" id="Fwh-1d-Rag"/>
+                <constraint firstItem="paL-gU-1Ho" firstAttribute="top" secondItem="lxV-CJ-jsd" secondAttribute="top" id="PPz-gy-x3e"/>
+                <constraint firstItem="Ilx-QS-tta" firstAttribute="centerX" secondItem="lxV-CJ-jsd" secondAttribute="centerX" id="T6O-tF-peQ"/>
+                <constraint firstItem="paL-gU-1Ho" firstAttribute="leading" secondItem="lxV-CJ-jsd" secondAttribute="leading" id="Yoj-nv-ABB"/>
+                <constraint firstItem="fmE-sR-8wY" firstAttribute="centerX" secondItem="lxV-CJ-jsd" secondAttribute="centerX" id="jvc-C3-Pii"/>
+                <constraint firstItem="fmE-sR-8wY" firstAttribute="top" secondItem="Ilx-QS-tta" secondAttribute="bottom" constant="8" symbolic="YES" id="vIf-df-3Yr"/>
+            </constraints>
+            <point key="canvasLocation" x="137" y="472"/>
         </customView>
     </objects>
 </document>
